--- a/2-pc/karbhiba.html
+++ b/2-pc/karbhiba.html
@@ -7,6 +7,7 @@
 
     <title>Személyi számítógép</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,20 +37,102 @@
         <h1>Megelőző karbantartás és hibakeresés (2+8 óra)</h1>
 
         <p>A témakörben a tanulók a hardveres és szoftveres karbantartásról, illetve az alapvető hibaelhárításról tanulnak, és megismerkednek a legfontosabb munka- és környezetvédelmi ismeretekkel. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Tisztában van a megelőző karbantartás céljával, jelentőségével.</li>
-          <li>Képes alkatrészek, perifériák szakszerű tisztítására, pormentesítésére a megfelelő eszközökkel.</li>
-          <li>Ismeri a számítógépek működésének környezeti feltételeit, a hőmérséklet és a páratartalom hatását a számítógép működésére.</li>
-          <li>Képes szoftveres karbantartási feladatok elvégzésére: az operációs rendszer frissítésére, víruskereső adatbázisának naprakészen tartására, nem használt alkalmazások törlésére, lemezek hibaellenőrzésére.</li>
-          <li>Ismeri és alkalmazza a hibakeresési folyamat lépéseit, képes a kézenfekvő problémák kiszűrésére.</li>
-          <li>Képes speciális karbantartásra és hibakeresésre mobileszközöknél és nyomtatóknál</li>
-          <li>Ismeri és alkalmazza az általános munkabiztonsági előírásokat, szabályokat.</li>
-          <li>Tisztában van a számítógépek és nyomtatók szerelésének érintésvédelmi irányelveivel.</li>
-          <li>Ismeri a tűzvédelmi irányelveket, képes elektromos tüzek oltására.</li>
-          <li>Tisztában van az elektrosztatikus kisülés (ESD) veszélyeivel, a védekezés lehetőségeivel.</li>
-          <li>Ismeri a tápfeszültség anomáliáit és veszélyeit, képes túlfeszültség-védelmi eszközök használatára.</li>
-          <li>Ismeri a számítógép-részegységek biztonságos megsemmisítésének célját és módozatait, valamint a lehetséges újrahasznosítási lehetőségeket.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a megelőző karbantartás céljával, jelentőségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes alkatrészek, perifériák szakszerű tisztítására, pormentesítésére a megfelelő eszközökkel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a számítógépek működésének környezeti feltételeit, a hőmérséklet és a páratartalom hatását a számítógép működésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes szoftveres karbantartási feladatok elvégzésére: az operációs rendszer frissítésére, víruskereső adatbázisának naprakészen tartására, nem használt alkalmazások törlésére, lemezek hibaellenőrzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri és alkalmazza a hibakeresési folyamat lépéseit, képes a kézenfekvő problémák kiszűrésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes speciális karbantartásra és hibakeresésre mobileszközöknél és nyomtatóknál.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri és alkalmazza az általános munkabiztonsági előírásokat, szabályokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a számítógépek és nyomtatók szerelésének érintésvédelmi irányelveivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a tűzvédelmi irányelveket, képes elektromos tüzek oltására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az elektrosztatikus kisülés (ESD) veszélyeivel, a védekezés lehetőségeivel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a tápfeszültség anomáliáit és veszélyeit, képes túlfeszültség-védelmi eszközök használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a számítógép-részegységek biztonságos megsemmisítésének célját és módozatait, valamint a lehetséges újrahasznosítási lehetőségeket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h1 id="szer">Szétszerelés, összeszerelés</h1>
         <p><a href="https://drive.google.com/file/d/1r-g9VzzEUDzRZJP0oQaW1oyIsFZtUHq6/view?usp=sharing" target=_blank>Számítógép összeszerelése</a></p>
@@ -66,5 +149,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
