--- a/2-pc/laptopok.html
+++ b/2-pc/laptopok.html
@@ -7,6 +7,7 @@
 
     <title>Személyi számítógép</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,22 +37,85 @@
         <h1>Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</h1>
 
         <p>A témakörben a tanulók a laptopok és más mobileszközök (pl. okostelefonok) jellemzőivel, felépítésével, alapszintű beállításaival és hibaelhárításával kapcsolatos ismereteket sajátítanak el. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Ismeri a hordozható eszközök típusait (laptop, okostelefon, tablet, e-book-olvasó stb.).</li>
-          <li>Fel tudja sorolni a laptopok összetevőit, megjelenítőeszközeit és hogy miben különböznek az asztali gépekétől.</li>
-          <li>Ismeri a laptopon található bővítőhelyeket, képes memóriabővítés elvégzésére.</li>
-          <li>Képes a laptopok felhasználó, illetve szerviz által cserélhető alkatrészeinek megkülönböztetésére.</li>
-          <li>Ismeri a dokkolóállomás és a portismétlő funkciót, képes csatlakoztatni és használni azokat.</li>
-          <li>Ismeri az energiagazdálkodási beállítások célját és képes azok konfigurálására.</li>
-          <li>Tudja, milyen vezeték nélküli csatlakozási módok léteznek, és képes használni azokat.</li>
-          <li>Meg tudja különböztetni az okostelefonok részegységeit, azok vezetékes és vezeték nélküli hálózati csatlakozási lehetőségeit.</li>
-          <li>Fel tudja sorolni az ismertebb viselhető és egyéb okoseszközöket, valamint azok jellemzőit.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hordozható eszközök típusait (laptop, okostelefon, tablet, e-book-olvasó stb.).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Fel tudja sorolni a laptopok összetevőit, megjelenítőeszközeit és hogy miben különböznek az asztali gépekétől.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a laptopon található bővítőhelyeket, képes memóriabővítés elvégzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a laptopok felhasználó, illetve szerviz által cserélhető alkatrészeinek megkülönböztetésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a dokkolóállomás és a portismétlő funkciót, képes csatlakoztatni és használni azokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az energiagazdálkodási beállítások célját és képes azok konfigurálására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, milyen vezeték nélküli csatlakozási módok léteznek, és képes használni azokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Meg tudja különböztetni az okostelefonok részegységeit, azok vezetékes és vezeték nélküli hálózati csatlakozási lehetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Fel tudja sorolni az ismertebb viselhető és egyéb okoseszközöket, valamint azok jellemzőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
