--- a/2-pc/nyomtatok.html
+++ b/2-pc/nyomtatok.html
@@ -7,6 +7,7 @@
 
     <title>Személyi számítógép</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,24 +34,97 @@
         </nav>
       </aside>
       <section>
-        
-
         <h1>Nyomtatók és egyéb perifériák (2+8 óra)</h1>
 
         <p>A témakörben a tanulók a nyomtatók típusaival, jellemzőivel, telepítésével és beállításaival ismerkednek meg, és képet alkotnak a további ki- és beviteli perifériákról is. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Fel tudja sorolni a hagyományos és a modern beviteli eszközöket, és képes azok használatára.</li>
-          <li>Ismeri a nyomtatók típusait, működési elvét, és össze tudja hasonlítani azokat.</li>
-          <li>Képes lapolvasásra és nyomtatásra multifunkciós nyomtatókkal.</li>
-          <li>Képes nyomtatókat és lapolvasókat telepíteni, beállítani és hálózaton megosztani.</li>
-          <li>Ismeri a nyomtatószerverek alkalmazási lehetőségeit, és használni is tudja azokat.</li>
-          <li>Képes a nyomtatók teljesítményének javítására szoftveres beállításokkal, valamint memóriabővítéssel.</li>
-          <li>Ismeri a virtuális nyomtatókat és képes azok használatára, valamint ismeri a 3D nyomtatók működési elvét.</li>
-          <li>Fel tudja sorolni a szkennerek típusait, tisztában van a működési elvükkel, és képes dokumentumok beolvasására.</li>
-          <li>Ismeri a megjelenítők típusait, paramétereit és alapvető működési elvét.</li>
-          <li>Ismeri a virtuális valóság (VR és AR) megjelenítőeszközeit.</li>
-          <li>Ismeri a hangeszközök beállításait, a hangszórók csatlakoztatási módját.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Fel tudja sorolni a hagyományos és a modern beviteli eszközöket, és képes azok használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a nyomtatók típusait, működési elvét, és össze tudja hasonlítani azokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes lapolvasásra és nyomtatásra multifunkciós nyomtatókkal.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes nyomtatókat és lapolvasókat telepíteni, beállítani és hálózaton megosztani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a nyomtatószerverek alkalmazási lehetőségeit, és használni is tudja azokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a nyomtatók teljesítményének javítására szoftveres beállításokkal, valamint memóriabővítéssel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a virtuális nyomtatókat és képes azok használatára, valamint ismeri a 3D nyomtatók működési elvét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Fel tudja sorolni a szkennerek típusait, tisztában van a működési elvükkel, és képes dokumentumok beolvasására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a megjelenítők típusait, paramétereit és alapvető működési elvét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a virtuális valóság (VR és AR) megjelenítőeszközeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hangeszközök beállításait, a hangszórók csatlakoztatási módját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h1 id="per">Perifériák</h1>
 
@@ -72,5 +146,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
