--- a/2-pc/pc.html
+++ b/2-pc/pc.html
@@ -7,6 +7,7 @@
 
     <title>Személyi számítógép</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,25 +37,142 @@
         <h1>A PC részei, PC szét- és összeszerelése, bővítése (2+10 óra)</h1>
 
         <p>A témakörben a tanulók áttekintik a számítógépek és mobileszközök, főbb perifériák és adathordozók felépítését. A témakör elsajátítása után a tanuló:</p>
-        <ul>
-          <li>Ismeri a számítógép általános felépítését, a számítógépházak, tápegységek, alaplapok, processzortípusok, foglalatok jellemzőit, tulajdonságait.</li>
-          <li>Ismeri a CPU-típusokat (RISC, CISC), a tokozási módokat, a processzor hűtési módszerét.</li>
-          <li>Ismeri a memóriák fő típusait (RAM, ROM) és altípusaikat. Képes felismerni a különböző memóriamodulokat (DIP, SIMM, DIMM, SODIMM).</li>
-          <li>Fel tudja sorolni a fontosabb illesztőkártya-típusokat (hálózati, audio, video stb.) és alaplapi csatlakozási felületeiket (PCI, AGP stb.).</li>
-          <li>Ismeri a háttértárak típusait, a merevlemezek és SSD-k csatolófelületeit; a mágneses és félvezető elven működő tárolókat; a redundáns adattárolás fogalmát, képes a fontosabb RAID-verziók működésének megértésére.</li>
-          <li>Fel tudja sorolni az optikai meghajtók típusait és azok fontosabb jellemzőit.</li>
-          <li>Képes felismerni a portok és csatlakozók típusait és csatlakoztatni a megfelelő eszközöket, meg tudja különböztetni a belső és külső kábeltípusokat.</li>
-          <li>Tudja a BIOS és az UEFI feladatát, képes azok beállítására és jelszóval való védelmére.</li>
-          <li>Képes a gép firmware-ének frissítésére.</li>
-          <li>Képes a speciális célú számítógépes rendszerek (CAD/CAM, virtualizáció, játék, HTPC) jellemzőinek felsorolására, ezek alapján az adott célra megfelelő hardver kiválasztására.</li>
-          <li>Ismeri a vastag- és vékonykliensek közti különbségeket, valamint a hálózati adattároló eszközök (NAS-ok) célját.</li>
-          <li>Képes a számítógép szakszerű szétszerelésére, az ehhez szükséges szerszámok kiválasztására és használatára.</li>
-          <li>Képes a pontos számítógép-konfiguráció meghatározására, a megfelelő alkatrészek kiválasztására.</li>
-          <li>Ismeri a számítógép szakszerű összeszerelésének folyamatát, és el is tudja végezni azt.</li>
-          <li>Képes memória és tárhely bővítésére asztali számítógépben és laptopban.</li>
-          <li>Tudja, hogyan lehet számítógép-alkatrészeket cserélni, frissíteni a hardverkomponenseket.</li>
-          <li>Ismeri a szünetmentes tápegységek (UPS) célját, típusait, és képes UPS üzembe helyezésére.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a számítógép általános felépítését, a számítógépházak, tápegységek, alaplapok, processzortípusok, foglalatok jellemzőit, tulajdonságait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a CPU-típusokat (RISC, CISC), a tokozási módokat, a processzor hűtési módszerét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a memóriák fő típusait (RAM, ROM) és altípusaikat. Képes felismerni a különböző memóriamodulokat (DIP, SIMM, DIMM, SODIMM).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Fel tudja sorolni a fontosabb illesztőkártya-típusokat (hálózati, audio, video stb.) és alaplapi csatlakozási felületeiket (PCI, AGP stb.).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a háttértárak típusait, a merevlemezek és SSD-k csatolófelületeit; a mágneses és félvezető elven működő tárolókat; a redundáns adattárolás fogalmát, képes a fontosabb RAID-verziók működésének megértésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Fel tudja sorolni az optikai meghajtók típusait és azok fontosabb jellemzőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes felismerni a portok és csatlakozók típusait és csatlakoztatni a megfelelő eszközöket, meg tudja különböztetni a belső és külső kábeltípusokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja a BIOS és az UEFI feladatát, képes azok beállítására és jelszóval való védelmére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a gép firmware-ének frissítésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a speciális célú számítógépes rendszerek (CAD/CAM, virtualizáció, játék, HTPC) jellemzőinek felsorolására, ezek alapján az adott célra megfelelő hardver kiválasztására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a vastag- és vékonykliensek közti különbségeket, valamint a hálózati adattároló eszközök (NAS-ok) célját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a számítógép szakszerű szétszerelésére, az ehhez szükséges szerszámok kiválasztására és használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a pontos számítógép-konfiguráció meghatározására, a megfelelő alkatrészek kiválasztására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a számítógép szakszerű összeszerelésének folyamatát, és el is tudja végezni azt.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes memória és tárhely bővítésére asztali számítógépben és laptopban.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, hogyan lehet számítógép-alkatrészeket cserélni, frissíteni a hardverkomponenseket.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a szünetmentes tápegységek (UPS) célját, típusait, és képes UPS üzembe helyezésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h1 id="haz">Gépház</h1>
 
@@ -99,5 +217,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
