--- a/3-rendszer/android.html
+++ b/3-rendszer/android.html
@@ -7,6 +7,7 @@
 
     <title>Operációs rendszerek</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,17 +45,78 @@
         <h3>Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</h3>
 
         <p>A témakör a mobileszközökön elterjedt két legfontosabb operációs rendszer, az Android és az iOS jellemzőit tárgyalja. A tanulóknak ismerniük kell a két rendszer kezelőfelületét, az alapvető beállításokat és szolgáltatásokat (pl. GPS, virtuális asszisztensek, VPN stb.), valamint az alapvető biztonsági beállításokat is. Ezenfelül a macOS operációs rendszer alapvető tulajdonságaival is tisztában kell lenniük. A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Ismeri az Android és az iOS operációs rendszerek jellemzőit, képes azok összehasonlítására.</li>
-          <li>Ismeri és használni tudja az Android és az iOS kezelőfelületét.</li>
-          <li>Használni tudja a közös szolgáltatásokat, pl.: képernyőforgatás, kalibráció, GPS, wifihívás, VPN, virtuális asszisztensek. Ismeri a mobileszközök biztonsági beállításait, lehetőségeit.</li>
-          <li>Ismeri és használni tudja a mobileszközökön elérhető felhőszolgáltatásokat.</li>
-          <li>Ismeri a macOS jellemzőit, összehasonlítva a többi operációs rendszerrel.</li>
-          <li>Ismeri és kezelni tudja a macOS grafikus és parancssori felületét az alapvető műveletekhez.</li>
-          <li>Képes biztonsági mentésre, ismeri a lemezkezelés lehetőségeit és segédprogramjait.</li>
-          <li>Képes időzített és ütemezett feladatok végrehajtására.</li>
-          <li>Képes a macOS frissítésére.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az Android és az iOS operációs rendszerek jellemzőit, képes azok összehasonlítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri és használni tudja az Android és az iOS kezelőfelületét.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Használni tudja a közös szolgáltatásokat, pl.: képernyőforgatás, kalibráció, GPS, wifihívás, VPN, virtuális asszisztensek. Ismeri a mobileszközök biztonsági beállításait, lehetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri és használni tudja a mobileszközökön elérhető felhőszolgáltatásokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a macOS jellemzőit, összehasonlítva a többi operációs rendszerrel.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri és kezelni tudja a macOS grafikus és parancssori felületét az alapvető műveletekhez.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes biztonsági mentésre, ismeri a lemezkezelés lehetőségeit és segédprogramjait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes időzített és ütemezett feladatok végrehajtására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a macOS frissítésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h3>Fagyi Zoli - AndroidOS progik</h3>
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLkr1Y29wGA3dVyZA_UU0S4wI5dHP4czjJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
@@ -64,5 +126,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
