--- a/3-rendszer/linux.html
+++ b/3-rendszer/linux.html
@@ -7,6 +7,7 @@
 
     <title>Operációs rendszerek</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,26 +43,150 @@
 
         <h3>Linux alapok (7+11 óra)</h3>
         <p>A témakör célja a Linux operációs rendszer legalapvetőbb kezelési, üzemeltetési feladatainak bemutatása. A témakör elsajátítását követően a tanuló:</p>
-        <ol>
-          <li>Ismeri a Linux szerepét, helyét az IT-iparban.</li>
-          <li>Ismeri a CLI-parancsok felépítését, az argumentumok megadási módját.</li>
-          <li>Ismeri a CLI-parancsok felépítését, az argumentumok megadási módját.</li>
-          <li>Ismeri a könyvtárkezelési parancsokat: mkdir, rmdir.</li>
-          <li>Képes fájlok listázására különböző szempontok szerint.</li>
-          <li>Képes parancsok kiadására rendszergazdai üzemmódba átlépve is.</li>
-          <li>Képes a számítógép szabályos leállítására.</li>
-          <li>Tisztában van az alapvető fájl-jogosultságokkal (read, write, executable), azok beállításával (chmod)</li>
-          <li>Képes fájlokat másolni, mozgatni, törölni parancssorban.</li>
-          <li>Képes szövegfájlok tartalmának megtekintésére.</li>
-          <li>Képes szövegekben történő keresésre, különböző feltételek szerint.</li>
-          <li>Ismeri az alapvető reguláris kifejezések célját és felhasználásukat szövegillesztéshez.</li>
-          <li>Képes egy szövegszerkesztő (vi, nano) használatára.</li>
-          <li>Be tudja állítani a gép IP-címzését.</li>
-          <li>Képes a futó folyamatok listázására, különböző szempontok szerint.</li>
-          <li>Ismeri az I/O-átirányítások szerepét, és tudja használni azokat.</li>
-          <li>Tisztában van az alapvető csomagkezelési parancsokkal, képes csomagok telepítésére és eltávolítására is.</li>
-          <li>Ismeri a jelszavak jelentőségét, képes megfelelő erősségű jelszavak beállítására.</li>
-        </ol>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Linux szerepét, helyét az IT-iparban.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a CLI-parancsok felépítését, az argumentumok megadási módját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a CLI-parancsok felépítését, az argumentumok megadási módját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a könyvtárkezelési parancsokat: mkdir, rmdir.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes fájlok listázására különböző szempontok szerint.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes parancsok kiadására rendszergazdai üzemmódba átlépve is.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a számítógép szabályos leállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az alapvető fájl-jogosultságokkal (read, write, executable), azok beállításával (chmod)</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes fájlokat másolni, mozgatni, törölni parancssorban.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes szövegfájlok tartalmának megtekintésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes szövegekben történő keresésre, különböző feltételek szerint.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az alapvető reguláris kifejezések célját és felhasználásukat szövegillesztéshez.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes egy szövegszerkesztő (vi, nano) használatára.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Be tudja állítani a gép IP-címzését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a futó folyamatok listázására, különböző szempontok szerint.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az I/O-átirányítások szerepét, és tudja használni azokat.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van az alapvető csomagkezelési parancsokkal, képes csomagok telepítésére és eltávolítására is.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a jelszavak jelentőségét, képes megfelelő erősségű jelszavak beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <p><a href="https://www.youtube.com/@magyarlinuxvideok9965" target="_blank">Magyar Linux Videók</a></p>
     
@@ -158,5 +283,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
