--- a/3-rendszer/virtkont.html
+++ b/3-rendszer/virtkont.html
@@ -7,6 +7,7 @@
 
     <title>Operációs rendszerek</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,30 +41,121 @@
       <section>
         <h1>Szerverek és felhőszolgáltatások - Virtualizáció és konténerek (8+54 óra)</h1>
         <p>A témakör célja az ismertebb virtualizációs technológiák mélyebb megismerése, a konténertechnológiákat is beleértve, valamint ezek segítségével virtuális gépek és konténerek létrehozása és menedzselése. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Ismeri a virtualizáció megvalósítási módjait, a szerver- és kliensoldali virtualizáció eszközeit.</li>
-          <li>Képes virtuális gépek telepítésére, hardverparamétereik beállítására, pillanatképek létrehozására.</li>
-          <li>Ismeri a konténer fogalmát, alkalmazási lehetőségeit.</li>
-          <li>Ismeri a különböző virtualizációs megoldások használatát: Hyper-V, KVM, Vmware.</li>
-          <li>Ismeri néhány ismertebb konténertechnológia használatát (pl. Docker, LXC), képes konténert létrehozni, indítani, hálózati elérését konfigurálni.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a virtualizáció megvalósítási módjait, a szerver- és kliensoldali virtualizáció eszközeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes virtuális gépek telepítésére, hardverparamétereik beállítására, pillanatképek létrehozására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a konténer fogalmát, alkalmazási lehetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a különböző virtualizációs megoldások használatát: Hyper-V, KVM, Vmware.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri néhány ismertebb konténertechnológia használatát (pl. Docker, LXC), képes konténert létrehozni, indítani, hálózati elérését konfigurálni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h1>Iéta1 - Virtualizáció és felhőtechnológiák (3+12 óra)</h1>
         <p>A témakör feladata, hogy megismertesse a tanulókat a virtualizáció céljával és megvalósítási módjaival, valamint a felhőtechnológiákkal (cloud computing). A témakör elsajátítását követően a tanuló:</p>
-        <ul>
-          <li>Ismeri a virtualizáció célját, fel tudja sorolni előnyeit a dedikált szerveres telepítési móddal szemben.</li>
-          <li>Tudja, mi a különbség a szerver- és kliensoldali virtualizáció között.</li>
-          <li>Ismeri a hypervisor jelentését, meg tudja különböztetni az 1-es és 2-es típusú hypervisort, és tud példákat mondani rájuk.</li>
-          <li>Tudja, milyen erőforrásigényt jelent a virtualizáció megvalósítása.</li>
-          <hr>
-          <li>Képes virtuális gép telepítésére valamilyen elterjedt virtualizációs programban (pl. Virtualbox, VMWare): be tudja állítani a virtuális hardver paramétereit, és képes image-fájlból operációs rendszert telepíteni.</li>
-          <hr>
-          <li>Ismeri a konténer fogalmát, tudja, hogy miben különbözik a virtuális gépektől, képes konténert indítani és leállítani valamilyen elterjedt módszer (pl. Docker) segítségével.</li>
-          <hr>
-          <li>Ismeri a számítási felhő (cloud computing) fogalmát, és tudja, hogy mire használható.</li>
-          <li>Fel tudja sorolni a gyakoribb felhőszolgáltatások (SaaS, PaaS, IaaS) jellemzőit, tud rájuk példát mondani, és használni is képes azokat (pl. Office 365, Gmail, Google Drive, Dropbox, OneDrive stb.).</li>
-          <li>Ismeri a felhőmodelleket (privát, publikus, hibrid), azok jellemzőit, és konkrét példákat tud mondani a használatukra.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a virtualizáció célját, fel tudja sorolni előnyeit a dedikált szerveres telepítési móddal szemben.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, mi a különbség a szerver- és kliensoldali virtualizáció között.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a hypervisor jelentését, meg tudja különböztetni az 1-es és 2-es típusú hypervisort, és tud példákat mondani rájuk.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, milyen erőforrásigényt jelent a virtualizáció megvalósítása.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes virtuális gép telepítésére valamilyen elterjedt virtualizációs programban (pl. Virtualbox, VMWare): be tudja állítani a virtuális hardver paramétereit, és képes image-fájlból operációs rendszert telepíteni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a konténer fogalmát, tudja, hogy miben különbözik a virtuális gépektől, képes konténert indítani és leállítani valamilyen elterjedt módszer (pl. Docker) segítségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a számítási felhő (cloud computing) fogalmát, és tudja, hogy mire használható.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Fel tudja sorolni a gyakoribb felhőszolgáltatások (SaaS, PaaS, IaaS) jellemzőit, tud rájuk példát mondani, és használni is képes azokat (pl. Office 365, Gmail, Google Drive, Dropbox, OneDrive stb.).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a felhőmodelleket (privát, publikus, hibrid), azok jellemzőit, és konkrét példákat tud mondani a használatukra.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h1>Anyagok</h1>
 
@@ -98,5 +190,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
