--- a/8-hor/felho.html
+++ b/8-hor/felho.html
@@ -7,6 +7,7 @@
 
     <title>Rendszerüzemeltetés</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,15 +40,62 @@
         <h1>Felhőszolgáltatások (9+62 óra)</h1>
 
         <p>A témakör célja a felhőtechnológia jellemzőinek, felhasználási lehetőségeinek bemutatása. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Ismeri a privát felhő, a nyilvános felhő és a hibrid felhő jellemzőit.</li>
-          <li>Ismeri az adatközpontok jellemzőit, felépítésüket, a fizikai és az adatbiztonság kívánalmait.</li>
-          <li>Ismeri és tudja kezelni a népszerű SaaS megoldásokat (pl. Onedrive, Dropbox, Google Apps, Office 365).</li>
-          <li>Ismeri a PaaS jellemzőit és legalább egy konkrét megvalósítását (pl. Google App Engine, Apache Stratos).</li>
-          <li>Ismeri az IaaS jellemzőit és legalább egy konkrét megvalósítását (pl. Amazon EC2, Windows Azure).</li>
-          <li>Ismeri a publikus felhőszolgáltatás címtármegoldásait (pl. Azure Active Directory).</li>
-          <li>Képes virtuális gépek és konténerek létrehozására és menedzselésére a felhőben (AWS, Azure vagy egyéb felhőszolgáltatásban).</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a privát felhő, a nyilvános felhő és a hibrid felhő jellemzőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az adatközpontok jellemzőit, felépítésüket, a fizikai és az adatbiztonság kívánalmait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri és tudja kezelni a népszerű SaaS megoldásokat (pl. Onedrive, Dropbox, Google Apps, Office 365).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a PaaS jellemzőit és legalább egy konkrét megvalósítását (pl. Google App Engine, Apache Stratos).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az IaaS jellemzőit és legalább egy konkrét megvalósítását (pl. Amazon EC2, Windows Azure).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a publikus felhőszolgáltatás címtármegoldásait (pl. Azure Active Directory).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes virtuális gépek és konténerek létrehozására és menedzselésére a felhőben (AWS, Azure vagy egyéb felhőszolgáltatásban).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h1>Felhőszolgáltatások</h1>
 
@@ -77,5 +125,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
