--- a/8-hor/windowsserver.html
+++ b/8-hor/windowsserver.html
@@ -7,6 +7,7 @@
 
     <title>Rendszerüzemeltetés</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,37 +40,238 @@
         <h1>Windows szerver telepítése és üzemeltetése (8+54 óra)</h1>
 
         <p>A témakörön belül a tanulók a Windows szerverek verzióival, telepítési módjaival és az üzemeltetésük során felmerülő tipikus feladatokkal ismerkednek meg. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Ismeri a Windows Server különböző kiadásainak fontosabb jellemzőit és licencelési módját.</li>
-          <li>Képes a telepítéshez szükséges hardverkövetelmények meghatározására.</li>
-          <li>Ismeri a különböző telepítési módokat, beleértve a hálózatról történőt is.</li>
-          <li>Ismeri a Windowsban használatos fájlrendszereket, a partíciók jellemzőit.</li>
-          <li>Tud Windows Servert telepíteni fizikai és virtuális gépre.</li>
-          <li>Képes az operációs rendszer frissítésére, verzióléptetésére.</li>
-          <li>Képes szerepkörök és tulajdonságok megtekintésére és telepítésére a Server Manager segítségével.</li>
-          <li>Képes állapotlekérdezésre és üzemeltetési feladatok ellátására a Server Manager segítségével.</li>
-          <li>Ismeri a PowerShell alapvető használatát, képes egyszerű adminisztrátori feladatok ellátására PowerShell szkriptek írásával.</li>
-          <li>Képes a rendszerfelügyeleti eszközök használatára (MMC).</li>
-          <li>Képes az állomány-kiszolgáló szerepkör beállítására (megosztások, tárolók létrehozása, kvóták és szűrések beállítása).</li>
-          <li>Képes a nyomtatószolgáltatás, nyomtatási sorok beállítására, kezelésére.</li>
-          <li>Képes DHCP-, DNS-, DFS- és WINS-szerver telepítésére és adott paraméterekkel történő beállítására.</li>
-          <li>Ismeri a biztonsági megfontolásokat a Windows operációs rendszerekben (hitelesítés, engedélyezés, fájlrendszer-jogosultságok, Windows-tűzfal, felhasználók felügyelete).</li>
-          <li>Tisztában van a címtárszolgáltatás alapfogalmaival, céljával, ismeri az Active Directory elemeit, felépítését (erdő, fa, tartomány).</li>
-          <li>Képes az Active Directory tartományvezérlő telepítésére és beállítására új és meglévő tartományban egyaránt.</li>
-          <li>Képes kliensgépeket tartományba léptetni, illetve onnan kiléptetni.</li>
-          <li>Ismeri a címtárszolgáltatás objektumait (felhasználók, csoportok, számítógépfiókok és szervezeti egységek) és azok kezelési feladatait.</li>
-          <li>Tud csak olvasható tartományvezérlőt telepíteni.</li>
-          <li>Ismeri a csoportházirendek célját, lehetőségeit, felépítését, a szabályok öröklődését.</li>
-          <li>Képes csoportházirendek segítségével a tartományi gépek és felhasználók számára a működési környezetet központilag beállítani.</li>
-          <li>Ismeri a szerver távoli elérési módjait, tudja használni a Távoli asztal szolgáltatást.</li>
-          <li>Képes Web- és FTP-szerver telepítésére, beállítására és üzemeltetésére.</li>
-          <li>Ismeri a Server Core telepítési változat jellemzőit, és képes azt telepíteni.</li>
-          <li>Tudja kezelni a szerverek távoli menedzselését segítő alkalmazást (RSAT).</li>
-          <li>Tudja telepíteni a Windows Server Backup szolgáltatást, és képes biztonsági mentések készítésére.</li>
-          <li>Képes VPN-kapcsolat konfigurálására.</li>
-          <li>Képes vírusirtó szoftvert telepíteni, kezelni és naprakészen tartani.</li>
-          <li>Ismeri a tanúsítvány fogalmát, célját, és képes különböző célokra készült tanúsítványok létrehozására és telepítésére.</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Windows Server különböző kiadásainak fontosabb jellemzőit és licencelési módját.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a telepítéshez szükséges hardverkövetelmények meghatározására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a különböző telepítési módokat, beleértve a hálózatról történőt is.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Windowsban használatos fájlrendszereket, a partíciók jellemzőit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tud Windows Servert telepíteni fizikai és virtuális gépre.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az operációs rendszer frissítésére, verzióléptetésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes szerepkörök és tulajdonságok megtekintésére és telepítésére a Server Manager segítségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes állapotlekérdezésre és üzemeltetési feladatok ellátására a Server Manager segítségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a PowerShell alapvető használatát, képes egyszerű adminisztrátori feladatok ellátására PowerShell szkriptek írásával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a rendszerfelügyeleti eszközök használatára (MMC).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az állomány-kiszolgáló szerepkör beállítására (megosztások, tárolók létrehozása, kvóták és szűrések beállítása).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a nyomtatószolgáltatás, nyomtatási sorok beállítására, kezelésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes DHCP-, DNS-, DFS- és WINS-szerver telepítésére és adott paraméterekkel történő beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a biztonsági megfontolásokat a Windows operációs rendszerekben (hitelesítés, engedélyezés, fájlrendszer-jogosultságok, Windows-tűzfal, felhasználók felügyelete).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tisztában van a címtárszolgáltatás alapfogalmaival, céljával, ismeri az Active Directory elemeit, felépítését (erdő, fa, tartomány).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az Active Directory tartományvezérlő telepítésére és beállítására új és meglévő tartományban egyaránt.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes kliensgépeket tartományba léptetni, illetve onnan kiléptetni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a címtárszolgáltatás objektumait (felhasználók, csoportok, számítógépfiókok és szervezeti egységek) és azok kezelési feladatait.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tud csak olvasható tartományvezérlőt telepíteni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a csoportházirendek célját, lehetőségeit, felépítését, a szabályok öröklődését.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes csoportházirendek segítségével a tartományi gépek és felhasználók számára a működési környezetet központilag beállítani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a szerver távoli elérési módjait, tudja használni a Távoli asztal szolgáltatást.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes Web- és FTP-szerver telepítésére, beállítására és üzemeltetésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Server Core telepítési változat jellemzőit, és képes azt telepíteni.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja kezelni a szerverek távoli menedzselését segítő alkalmazást (RSAT).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja telepíteni a Windows Server Backup szolgáltatást, és képes biztonsági mentések készítésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes VPN-kapcsolat konfigurálására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes vírusirtó szoftvert telepíteni, kezelni és naprakészen tartani.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a tanúsítvány fogalmát, célját, és képes különböző célokra készült tanúsítványok létrehozására és telepítésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h1>Windows Server 2008</h1>
 
@@ -164,5 +366,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
