--- a/8-hor/winlinint.html
+++ b/8-hor/winlinint.html
@@ -7,6 +7,7 @@
 
     <title>Rendszerüzemeltetés</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,13 +38,46 @@
         <h1>Linux és Windows rendszerek integrációja (9+62 óra)</h1>
 
         <p>A témakörben a két legelterjedtebb hálózati operációs rendszer egy hálózaton belüli integrált alkalmazásának és együttműködésének néhány fontosabb lehetőségét ismerhetik meg a tanulók. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-        <ul>
-          <li>Ismeri a Windows és Linux rendszerek együttműködésének lehetőségeit.</li>
-          <li>Képes a számítógépen multiboot üzemmód beállítására.</li>
-          <li>Képes címtárszolgáltatások beállítására vegyes szerver-kliens környezetben (LDAP).</li>
-          <li>Képes fájlkiszolgáló, illetve fájlmegosztás használatára vegyes szerver-kliens környezetben (Samba).</li>
-          <li>Képes levelezési szolgáltatás üzemeltetésére vegyes szerver-kliens környezetben (Exchange szerver elérése Linux alól).</li>
-        </ul>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a Windows és Linux rendszerek együttműködésének lehetőségeit.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes a számítógépen multiboot üzemmód beállítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes címtárszolgáltatások beállítására vegyes szerver-kliens környezetben (LDAP).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes fájlkiszolgáló, illetve fájlmegosztás használatára vegyes szerver-kliens környezetben (Samba).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes levelezési szolgáltatás üzemeltetésére vegyes szerver-kliens környezetben (Exchange szerver elérése Linux alól).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h1>Windows és Linux integrációja</h1>
 
@@ -88,5 +122,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
