--- a/3-rendszer/windows.html
+++ b/3-rendszer/windows.html
@@ -7,6 +7,7 @@
 
     <title>Operációs rendszerek</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,23 +43,126 @@
 
         <h3>Windows telepítése és konfigurációja (3+12 óra)</h3>
         <p>A témakör célja, hogy a tanulók megismerkedjenek a Windows operációs rendszer jellemzőivel, telepítési módozataival, valamint a napi használathoz szükséges konfigurálásával. A témakör elsajátítását követően a tanuló:</p>
-        <ol>
-          <li>Ismeri az operációs rendszer fogalmát, fel tudja sorolni annak feladatait. - Tudja, milyen típusú operációs rendszerek léteznek, ismeri a GPL, multiuser, multitask fogalmát.</li>
-          <li>Tudja, mi a különbség a GUI és CLI felhasználói felületek között, és képes azok használatára. - Tudja, milyen szempontok alapján lehet kiválasztani adott célnak megfelelő operációs rendszert.</li>
-          <li>Ismeri a partíció fogalmát, típusait, tud adott séma alapján merevlemezt particionálni. - Ismeri a fontosabb fájlrendszerek (FAT, NTFS, ext2/3/4) tulajdonságait, esetleges korlátait, és képes adott fájlrendszert létrehozni a lemezen.</li>
-          <li>Képes az operációs rendszerek hardverkövetelményeinek meghatározására. - Képes az operációs rendszer hardverkompatibilitásának ellenőrzésére.</li>
-          <li>Képes telepíteni a Windows operációs rendszert telepítőmédiumról (DVD, pendrive).</li>
-          <li>Képes meghajtóprogramokat telepíteni adott hardvereszközhöz, képes azokat frissíteni, esetlegesen letiltani. - Képes frissítések és hibajavító csomagok telepítésére az operációs rendszerhez, tudja kezelni a Windows Update-et.</li>
-          <li>Képes az operációs rendszer verziófrissítésére (upgrade), a felhasználói adatok más gépre való költöztetésére. - Ismeri a Windows lemezkezelési lehetőségeit, a lemezkezelő alkalmazást, illetve a lemezkarbantartási műveleteket (töredezettségmentesítés, hibaellenőrzés).</li>
-          <li>Képes multiboot rendszerek beállítására többféle operációs rendszer indításához ugyanazon a gépen. - Ismeri a Windows speciális telepítési módjait, pl. unattended mód.</li>
-          <li>Ismeri a lemezklónozás célját, képes kezelni valamilyen klónozó programot (pl. Clonezilla). - Ismeri a Windows betöltési folyamatát, képes váltani a betöltési módok között rendszerindításkor.</li>
-          <li>Képes alkalmazások és folyamatok indítására, leállítására, adataik lekérdezésére a Feladatkezelő használatával. - Képes alkalmazások, programok telepítésére és eltávolítására.</li>
-          <li>Ismeri a fájlkezelési műveleteket az Intéző segítségével, illetve parancssorból. - Képes konfigurálási műveletek elvégzésére a Vezérlőpultban és a Gépházban található beállítások segítségével.</li>
-          <li>Képes felhasználói fiókokat hozzáadni, törölni, típusukat megváltoztatni és beállítani a jelszavakat. - Képes illesztőprogramok frissítésére az Eszközkezelő használatával.</li>
-          <li>Képes konfigurálni a területi és nyelvi beállításokat. - Képes az Eseménynapló segítségével adatokat keresni eseményekről, és képes felhasználni ezeket hibakereséshez.</li>
-          <li>Tudja monitorozni a rendszer erőforrásait, képes szolgáltatások indítására és leállítására. - Ismeri a regisztrációs adatbázis célját, és képes abban beállításokat végezni a Regedit programmal.</li>
-          <li>Felismeri a CLI jelentőségét, és képes parancssori eszközöket használni a gyakoribb feladatokra (fájlműveletek, hálózatkezelés, felhasználókezelés stb.).</li>
-        </ol>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri az operációs rendszer fogalmát, fel tudja sorolni annak feladatait. - Tudja, milyen típusú operációs rendszerek léteznek, ismeri a GPL, multiuser, multitask fogalmát.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja, mi a különbség a GUI és CLI felhasználói felületek között, és képes azok használatára. - Tudja, milyen szempontok alapján lehet kiválasztani adott célnak megfelelő operációs rendszert.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a partíció fogalmát, típusait, tud adott séma alapján merevlemezt particionálni. - Ismeri a fontosabb fájlrendszerek (FAT, NTFS, ext2/3/4) tulajdonságait, esetleges korlátait, és képes adott fájlrendszert létrehozni a lemezen.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az operációs rendszerek hardverkövetelményeinek meghatározására. - Képes az operációs rendszer hardverkompatibilitásának ellenőrzésére.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes telepíteni a Windows operációs rendszert telepítőmédiumról (DVD, pendrive).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes meghajtóprogramokat telepíteni adott hardvereszközhöz, képes azokat frissíteni, esetlegesen letiltani. - Képes frissítések és hibajavító csomagok telepítésére az operációs rendszerhez, tudja kezelni a Windows Update-et.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes az operációs rendszer verziófrissítésére (upgrade), a felhasználói adatok más gépre való költöztetésére. - Ismeri a Windows lemezkezelési lehetőségeit, a lemezkezelő alkalmazást, illetve a lemezkarbantartási műveleteket (töredezettségmentesítés, hibaellenőrzés).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes multiboot rendszerek beállítására többféle operációs rendszer indításához ugyanazon a gépen. - Ismeri a Windows speciális telepítési módjait, pl. unattended mód.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a lemezklónozás célját, képes kezelni valamilyen klónozó programot (pl. Clonezilla). - Ismeri a Windows betöltési folyamatát, képes váltani a betöltési módok között rendszerindításkor.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes alkalmazások és folyamatok indítására, leállítására, adataik lekérdezésére a Feladatkezelő használatával. - Képes alkalmazások, programok telepítésére és eltávolítására.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri a fájlkezelési műveleteket az Intéző segítségével, illetve parancssorból. - Képes konfigurálási műveletek elvégzésére a Vezérlőpultban és a Gépházban található beállítások segítségével.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes felhasználói fiókokat hozzáadni, törölni, típusukat megváltoztatni és beállítani a jelszavakat. - Képes illesztőprogramok frissítésére az Eszközkezelő használatával.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Képes konfigurálni a területi és nyelvi beállításokat. - Képes az Eseménynapló segítségével adatokat keresni eseményekről, és képes felhasználni ezeket hibakereséshez.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Tudja monitorozni a rendszer erőforrásait, képes szolgáltatások indítására és leállítására. - Ismeri a regisztrációs adatbázis célját, és képes abban beállításokat végezni a Regedit programmal.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Felismeri a CLI jelentőségét, és képes parancssori eszközöket használni a gyakoribb feladatokra (fájlműveletek, hálózatkezelés, felhasználókezelés stb.).</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
 
         <h3>Könyvek</h3>
         <p><a href="https://drive.google.com/file/d/1XyHw8d5LnRrhayEoq4rJf7uCeqS5X5EV/view?usp=sharing" target=_blank>Illés Zoltán: Windows</a></p>
@@ -113,5 +217,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
